# AppAutomation

./: README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
src/: custom-theme.scss  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download_update.rs  get_info_scripts.rs  get_info_windows.rs  info_script_work.rs  main.rs  open_file.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/models/: app-info.ts  command.ts  script.ts
src/app/services/: about.service.ts  app-scripts.service.spec.ts  app-scripts.service.ts  list-apps.service.spec.ts  list-apps.service.ts  scripts.service.ts
src/app/views/about/: about.component.html  about.component.ts
src/app/views/app-script-form/: app-script-form.component.html  app-script-form.component.ts
src/app/views/app-scripts/: app-scripts.component.html  app-scripts.component.ts
src/app/views/list-apps/: list-apps.component.html  list-apps.component.ts
src/app/views/script-log/: script-log.component.html  script-log.component.ts
src/app/views/shared/fields/search/: search.component.html  search.component.ts
src/app/views/shared/header/: header.component.html  header.component.ts
src/app/views/shared/window-notify/: window-notify.component.ts
src/environments/: environment.ts
