[package]
name = "app-automation"
version = "0.3.2"
description = "App Automation"
authors = ["Dmitriy303"]
license = "MIT License"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.2"
opener = "0.7.0"
winapi = { version = "0.3.9", features = ["winuser", "winver"] }
enigo = "0.1.3"
chrono = "0.4.37"
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
